<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/customer_border"
    android:backgroundTint="@color/primary_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ngay_dat"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtNgayDat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/tien_coc"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtTienCoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ngay_bat_dau_dk"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtNgayBatDauDuKien"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ngay_ket_thuc_dk"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtNgayKetThucDuKien"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ngay_bat_dau_tt"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtNgayBatDauThucTe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ngay_ket_thuc_tt"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtNgayKetThucThucTe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/thanh_tien"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtThanhTien"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/ghi_chu_chi_tiet"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtGhiChu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/trang_thai"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:id="@+id/txtTrangThai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/primary_text_color"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnCapNhat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_background"
            android:text="@string/sua"
            android:textColor="@color/title_color"
            tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnXoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_background"
            android:text="@string/xoa"
            android:textColor="@color/title_color"
            tools:ignore="ButtonStyle,RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>